polybar: new icon for date
also swapping date and time

--- a/config/polybar/modules/info.ini
+++ b/config/polybar/modules/info.ini
@@ -19,6 +19,10 @@ label-foreground = ${colors.fg-3}
 [module/date]
 type = internal/date
 interval = 5
+format-prefix = " "
+format-prefix-underline = ${colors.ff4500}
+format-prefix-background = ${colors.bg-1}
+format-prefix-foreground = ${colors.ff4500}
 label-underline = ${colors.ff4500}
 label-background = ${colors.bg-1}
 label-foreground = ${colors.fg-3}
@@ -103,7 +107,8 @@ label-foreground = ${colors.fg-3}
 [module/memory]
 type = internal/memory
 interval = 2
-format-prefix = " "
+; format-prefix = " "
+format-prefix = " "
 format-prefix-underline = ${colors.cyan-1}
 format-prefix-background = ${colors.bg-1}
 format-prefix-foreground = ${colors.cyan-1}
