polybar: Changing date format
to day-month-year

--- a/config/polybar/modules/info.ini
+++ b/config/polybar/modules/info.ini
@@ -26,7 +26,8 @@ format-prefix-foreground = ${colors.ff4500}
 label-underline = ${colors.ff4500}
 label-background = ${colors.bg-1}
 label-foreground = ${colors.fg-3}
-time = %Y-%m-%d
+; time = %Y-%m-%d
+time = %d-%m-%Y
 label = %time%
 
 
