--- a/config/polybar/modules/system.ini
+++ b/config/polybar/modules/system.ini
@@ -30,6 +30,28 @@ type = internal/backlight
 card = intel_backlight
 
 
+[module/brightnessctl]
+type = custom/script
+
+exec = brightnessctl -m | awk -F, '{print $4}'
+scroll-up = brightnessctl set +1% --quiet
+scroll-down = brightnessctl set 1%- --quiet
+interval = .2
+
+format = <label>
+format-prefix = "󰃠 "
+
+label = %output%
+
+label-underline = ${colors.ff4500}
+label-background = ${colors.bg-1}
+label-foreground = ${colors.fg-3}
+
+format-prefix-underline = ${colors.ff4500}
+format-prefix-foreground = ${colors.ff4500}
+format-prefix-background = ${colors.bg-1}
+
+
 [module/wlan]
 type = internal/network
 interface = wlp3s0
