polybar: update brightness update interval
change it from .2 to 1

--- a/config/polybar/modules/system.ini
+++ b/config/polybar/modules/system.ini
@@ -36,7 +36,7 @@ type = custom/script
 exec = brightnessctl -m | awk -F, '{print $4}'
 scroll-up = brightnessctl set +1% --quiet
 scroll-down = brightnessctl set 1%- --quiet
-interval = .2
+interval = 1
 
 format = <label>
 format-prefix = "󰃠 "
