--- a/config/i3wm/config
+++ b/config/i3wm/config
@@ -4,7 +4,7 @@
 #
 # Last modification : 2023.05.27
 # Author            : Lasercata
-# Version           : v1.7.8
+# Version           : v1.7.9
 #
 #--------------------------------
 
@@ -15,11 +15,20 @@
 
 #------Startup
 #{{{
-#Turn Bluetooth off
+#---Turn Bluetooth off
 exec "bluetooth off"
 
-#Mute the microphone (actually just set volume to 0)
+#---Mute the microphone (actually just set volume to 0)
 exec "pactl set-source-volume 0 0%"
+
+#---Set the keyboard layout to azerty (variant azerty, not the default latin9)
+#To list all the available variants : `localectl list-x11-keymap-variants fr`
+# exec "setxkbmap fr -variant azerty"
+
+#---Remap caps lock to esc
+# exec "setxkbmap -option caps:escape"
+
+# Done in the file /etc/default/keyboard
 #}}}
 
 #------Appearance
@@ -37,11 +46,11 @@ exec_always --no-startup-id ~/.config/polybar/launch.sh
 # }
 
 #---Wallpaper
-exec_always --no-startup-id feh --bg-scale /home/lasercata/.local/share/wallpapers/Flow_5120x2880.jpg
-# exec_always --no-startup-id feh --bg-scale /home/lasercata/.wallpapers/7y7hhusqo5xa1.png
-# exec_always --no-startup-id feh --bg-scale /home/lasercata/.local/share/wallpapers/aoraki-mount-cook-national-park-lake-sunset-reflection-1920x1080-8658.jpg
-# exec_always --no-startup-id feh --bg-scale /home/lasercata/.local/share/wallpapers/pragser-wildsee-lake-dolomite-mountains-italy-scenic-1920x1080-8839.jpg
-# exec_always --no-startup-id feh --bg-scale /home/lasercata/.wallpapers/misty-mountains-v0-zwq468b18ywa1.jpg
+exec_always --no-startup-id feh --bg-scale ~/.wallpapers/Flow_5120x2880.jpg
+# exec_always --no-startup-id feh --bg-scale ~/.wallpapers/7y7hhusqo5xa1.png
+# exec_always --no-startup-id feh --bg-scale ~/.wallpapers/aoraki-mount-cook-national-park-lake-sunset-reflection-1920x1080-8658.jpg
+# exec_always --no-startup-id feh --bg-scale ~/.wallpapers/pragser-wildsee-lake-dolomite-mountains-italy-scenic-1920x1080-8839.jpg
+# exec_always --no-startup-id feh --bg-scale ~/.wallpapers/misty-mountains-v0-zwq468b18ywa1.jpg
 
 #---Windows colors
 # class                 border  backgr. text    indicator child_border
@@ -166,13 +175,10 @@ bindsym XF86TouchpadToggle exec ~/.config/i3/toggle_touchpad.sh
 exec_always --no-startup-id numlockx on
 
 #---Lock screen
-bindsym $mod+o exec "i3lock -t -c 000000 -i /home/lasercata/Pictures/lasercata_logo_fly_parrot_bk/lasercata_logo_fly_on_parrot_bk_modif_9.png"
+bindsym $mod+o exec "i3lock -t -c 000000 -i ~/.wallpapers/lasercata_logo_fly_on_parrot_bk_modif_9.png"
 
 # Auto lock the screen
-# exec "xautolock -detectsleep -time 20 -locker \"i3block -t -c 000000 -i /home/lasercata/Pictures/lasercata_logo_fly_parrot_bk/lasercata_logo_fly_on_parrot_bk_modif_9.png\""
-
-#---Remap caps lock to esc
-exec_always --no-startup-id setxkbmap -option caps:escape
+# exec "xautolock -detectsleep -time 20 -locker \"i3block -t -c 000000 -i ~/.wallpapers/lasercata_logo_fly_on_parrot_bk_modif_9.png\""
 # }}}
 
 #------Workspaces
@@ -273,7 +279,7 @@ bindsym Control+Mod1+c exec rofi -theme Monokai -modi "clipboard:greenclip print
 exec_always --no-startup-id xbanish
 # }}}
 
-#------Integration of KDE apps in i3 (using qt5ct)
+#------Integration of KDE apps in i3 (for the theme, using qt5ct)
 #{{{
 exec_always --no-startup-id "export QT_QPA_PLATFORMTHEME=\"qt5ct\""
 # }}}
