polybar: adding fan stat

--- a/config/polybar/modules/system.ini
+++ b/config/polybar/modules/system.ini
@@ -5,6 +5,24 @@ tail = true
 click-left = ~/polybar-scripts/system-usb-udev.sh --mount &
 click-right = ~/polybar-scripts/system-usb-udev.sh --unmount &
 
+[module/system-fan-speed]
+type = custom/script
+exec = ~/.config/polybar/scripts/fan_speed.sh
+interval = 1
+
+format = <label>
+format-prefix = "󰈐 "
+
+label = %output%
+
+label-underline = ${colors.ff4500}
+label-background = ${colors.bg-1}
+label-foreground = ${colors.fg-3}
+
+format-prefix-underline = ${colors.ff4500}
+format-prefix-foreground = ${colors.ff4500}
+format-prefix-background = ${colors.bg-1}
+
 
 [module/xbacklight]
 type = internal/xbacklight
