--- a/config/polybar/config
+++ b/config/polybar/config
@@ -20,7 +20,7 @@
 ;
 ; Last modification : 2023.05.22
 ; Author            : Polybar, then Lasercata
-; Version           : v2.1.0
+; Version           : v2.1.1
 ;
 ; This is used in i3 (window manager)
 ; Inspired from https://github.com/Vallen217/dotfiles/tree/master/.config/polybar for v2.0.0.
@@ -70,7 +70,7 @@ font-1 = Hack Nerd Font:size=12
 ; font-3 = FontAwesome:size=10
 
 modules-left = i3 slash space info-hackspeed space slash space cmus
-modules-center = memory space slash space filesystem space slash space cpu
+modules-center = memory space slash space filesystem space slash space cpu space slash space system-fan-speed
 modules-right = alsa space slash space network space slash bluetooth slash space battery space slash brightnessctl space slash space date space slash space time space
 
 tray-position = right
