--- a/config/i3wm/config
+++ b/config/i3wm/config
@@ -4,7 +4,7 @@
 #
 # Last modification : 2023.05.28
 # Author            : Lasercata
-# Version           : v1.7.11
+# Version           : v1.7.12
 #
 #--------------------------------
 
@@ -199,6 +199,19 @@ set $ws8 "8"
 set $ws9 "9"
 set $ws10 "10"
 
+set $ws11 "11"
+set $ws12 "12"
+set $ws13 "13"
+set $ws14 "14"
+set $ws15 "15"
+set $ws16 "16"
+set $ws17 "17"
+set $ws18 "18"
+set $ws19 "19"
+set $ws20 "20"
+set $ws21 "21"
+set $ws22 "22"
+
 #For two monitors, use odd for the main one, and even for the other.
 #If there is only one monitor, all workspaces are accessible.
 set $Lmon eDP-1
@@ -209,12 +222,24 @@ workspace $ws3 output $Lmon
 workspace $ws5 output $Lmon
 workspace $ws7 output $Lmon
 workspace $ws9 output $Lmon
+workspace $ws11 output $Lmon
+workspace $ws13 output $Lmon
+workspace $ws15 output $Lmon
+workspace $ws17 output $Lmon
+workspace $ws19 output $Lmon
+workspace $ws21 output $Lmon
 
 workspace $ws2 output $Rmon
 workspace $ws4 output $Rmon
 workspace $ws6 output $Rmon
 workspace $ws8 output $Rmon
 workspace $ws10 output $Rmon
+workspace $ws12 output $Lmon
+workspace $ws14 output $Lmon
+workspace $ws16 output $Lmon
+workspace $ws18 output $Lmon
+workspace $ws20 output $Lmon
+workspace $ws22 output $Lmon
 
 # switch to workspace
 bindsym $mod+1 workspace $ws1
@@ -228,6 +253,19 @@ bindsym $mod+8 workspace $ws8
 bindsym $mod+9 workspace $ws9
 bindsym $mod+0 workspace $ws10
 
+bindsym $mod+F1 workspace $ws11
+bindsym $mod+F2 workspace $ws12
+bindsym $mod+F3 workspace $ws13
+bindsym $mod+F4 workspace $ws14
+bindsym $mod+F5 workspace $ws15
+bindsym $mod+F6 workspace $ws16
+bindsym $mod+F7 workspace $ws17
+bindsym $mod+F8 workspace $ws18
+bindsym $mod+F9 workspace $ws19
+bindsym $mod+F10 workspace $ws20
+bindsym $mod+F11 workspace $ws21
+bindsym $mod+F12 workspace $ws22
+
 # move focused container to workspace
 bindsym $mod+Shift+1 move container to workspace $ws1
 bindsym $mod+Shift+2 move container to workspace $ws2
@@ -239,6 +277,19 @@ bindsym $mod+Shift+7 move container to workspace $ws7
 bindsym $mod+Shift+8 move container to workspace $ws8
 bindsym $mod+Shift+9 move container to workspace $ws9
 bindsym $mod+Shift+0 move container to workspace $ws10
+
+bindsym $mod+Shift+F1 move container to workspace $ws11
+bindsym $mod+Shift+F2 move container to workspace $ws12
+bindsym $mod+Shift+F3 move container to workspace $ws13
+bindsym $mod+Shift+F4 move container to workspace $ws14
+bindsym $mod+Shift+F5 move container to workspace $ws15
+bindsym $mod+Shift+F6 move container to workspace $ws16
+bindsym $mod+Shift+F7 move container to workspace $ws17
+bindsym $mod+Shift+F8 move container to workspace $ws18
+bindsym $mod+Shift+F9 move container to workspace $ws19
+bindsym $mod+Shift+F10 move container to workspace $ws20
+bindsym $mod+Shift+F11 move container to workspace $ws21
+bindsym $mod+Shift+F12 move container to workspace $ws22
 # }}}
 
 #------Resize mode
