neofetch: remove public IP

--- a/config/neofetch/config.conf
+++ b/config/neofetch/config.conf
@@ -11,9 +11,9 @@
 
 #-------------------------
 #
-# last modif : 2023.05.03
+# last modif : 2023.06.01
 # author     :
-# version    : v1.0
+# version    : v1.1
 #
 #-------------------------
 
@@ -47,7 +47,7 @@ print_info() {
     # info " ​ ​ ﱘ " song
     # [[ "$player" ]] && prin "Music Player" "$player"
     info " ​ ​  local_ip " local_ip
-    info " ​ ​  public_ip " public_ip
+    # info " ​ ​  public_ip " public_ip
     info " ​ ​  packages " packages
     prin "└──────────────────────────────────────────────────────────┘"
     info cols
