ranger: add openers for 3D files (`stl`)

--- a/config/ranger/rifle.conf
+++ b/config/ranger/rifle.conf
@@ -261,6 +261,14 @@ label wallpaper, number 12, mime ^image, has feh, X = feh --bg-tile "$1"
 label wallpaper, number 13, mime ^image, has feh, X = feh --bg-center "$1"
 label wallpaper, number 14, mime ^image, has feh, X = feh --bg-fill "$1"
 
+
+#-------------------------------------------
+# 3D files
+#-------------------------------------------
+ext stl, has f3d,     X, flag f = f3d "$@"
+ext stl, has fstl,     X, flag f = fstl "$@"
+
+
 #-------------------------------------------
 # Generic file openers
 #-------------------------------------------
