Adding trash commands to ranger

--- a/config/ranger/rc.conf
+++ b/config/ranger/rc.conf
@@ -1,3 +1,11 @@
+#--------------------------------------------
+#
+# Last modification : 2023.06.30
+# Author            : Ranger, then lasercata
+# Version           : v1.1
+#
+#--------------------------------------------
+
 # ===================================================================
 # This file contains the default startup commands for ranger.
 # To change them, it is recommended to create either /etc/ranger/rc.conf
@@ -114,7 +122,8 @@ set preview_images false
 #   Preview images in full color with the external command "ueberzug".
 #   Images are shown by using a child window.
 #   Only for users who run X11 in GNU/Linux.
-set preview_images_method w3m
+set preview_images_method kitty
+# set preview_images_method w3m
 
 # Delay in seconds before displaying an image with the w3m method.
 # Increase it in case of experiencing display corruption.
@@ -438,6 +447,14 @@ map K  move up=0.5    pages=True
 copymap J <C-D>
 copymap K <C-U>
 
+# Move in command mode
+# cmap <A-h> <LEFT>
+# cmap <A-j> <DOWN>
+# cmap <A-k> <UP>
+# cmap <A-l> <RIGHT>
+
+# Does not works ...
+
 # Jumping around
 map H     history_go -1
 map L     history_go 1
@@ -496,6 +513,8 @@ map p'<any> paste dest=%any_path
 
 map dD console delete
 map dT console trash
+map DD shell -s trash -v %s 2>&1
+map T shell trash-restore
 
 map dd cut
 map ud uncut
