--- a/config/ranger/rc.conf
+++ b/config/ranger/rc.conf
@@ -2,7 +2,7 @@
 #
 # Last modification : 2023.06.30
 # Author            : Ranger, then lasercata
-# Version           : v1.1
+# Version           : v1.1.1
 #
 #--------------------------------------------
 
@@ -613,6 +613,9 @@ map zu    set autoupdate_cumulative_size!
 map zv    set use_preview_script!
 map zf    console filter%space
 copymap zf zz
+
+# Show exif data
+map x shell -p exiftool %s
 
 # Filter stack
 map .d filter_stack add type d
