--- a/config/i3wm/config
+++ b/config/i3wm/config
@@ -4,7 +4,7 @@
 #
 # Last modification : 2023.07.11
 # Author            : Lasercata
-# Version           : v1.8.2
+# Version           : v1.8.3
 #
 #--------------------------------
 
@@ -188,11 +188,14 @@ bindsym XF86TouchpadToggle exec ~/.config/i3/script/toggle_touchpad_libinput.sh
 exec_always --no-startup-id numlockx on
 
 #---Lock screen
-bindsym $mod+o exec "i3lock -t -c 000000 -i ~/.wallpapers/lasercata_logo_fly_on_parrot_bk_modif_9.png"
-bindsym $mod+Shift+o exec "i3lock -t -c 000000 -i ~/.wallpapers/lasercata_logo_fly_on_parrot_bk_modif_9.png && systemctl suspend"
+set $locker i3lock -t -c 000000 -i ~/.wallpapers/lasercata_logo_fly_on_parrot_bk_modif_9.png
+
+bindsym $mod+o exec $locker
+bindsym $mod+Shift+o exec $locker && systemctl suspend
 
 # Auto lock the screen
-exec "xautolock -detectsleep -time 19 -locker \"i3block -t -c 000000 -i ~/.wallpapers/lasercata_logo_fly_on_parrot_bk_modif_9.png\""
+exec "xautolock -detectsleep -time 19 -locker \"$locker\""
+# exec "xautolock -detectsleep -time 19 -locker \"i3block -t -c 000000 -i ~/.wallpapers/lasercata_logo_fly_on_parrot_bk_modif_9.png\""
 #TODO: test this.
 #does not works ...
 
