--- a/config/i3wm/config
+++ b/config/i3wm/config
@@ -4,7 +4,7 @@
 #
 # Last modification : 2023.07.11
 # Author            : Lasercata
-# Version           : v1.8.3
+# Version           : v1.8.4
 #
 #--------------------------------
 
@@ -16,19 +16,22 @@
 #------Startup
 #{{{
 #---Turn Bluetooth off
-exec "bluetooth off"
+exec_always "bluetooth off"
 
 #---Mute the microphone (actually just set volume to 0)
-exec "pactl set-source-volume 0 0%"
+exec_always "pactl set-source-volume 0 0%"
 
 #---Set the keyboard layout to azerty (variant azerty, not the default latin9)
 #To list all the available variants : `localectl list-x11-keymap-variants fr`
-# exec "setxkbmap fr -variant azerty"
+# exec_always "setxkbmap fr -variant azerty"
 
 #---Remap caps lock to esc
-# exec "setxkbmap -option caps:escape"
+# exec_always "setxkbmap -option caps:escape"
 
 # Done in the file /etc/default/keyboard
+
+#---Battery script launch
+exec_always ~/.config/i3/scripts/battery_mesages.sh
 #}}}
 
 #------Appearance
@@ -73,8 +76,8 @@ default_floating_border pixel 2
 
 #---Transparency
 # Using picom. See ~/.config/picom.conf for configuration.
-exec --no-startup-id picom
-# exec --no-startup-id ~/Documents/0.AAA_softwares/99.autres/picom_jonaburg/picom/build/src/picom
+exec_always --no-startup-id picom
+# exec_always --no-startup-id ~/Documents/0.AAA_softwares/99.autres/picom_jonaburg/picom/build/src/picom
 # }}}
 
 #------Bindings
@@ -188,19 +191,18 @@ bindsym XF86TouchpadToggle exec ~/.config/i3/script/toggle_touchpad_libinput.sh
 exec_always --no-startup-id numlockx on
 
 #---Lock screen
+#-Define locker app
 set $locker i3lock -t -c 000000 -i ~/.wallpapers/lasercata_logo_fly_on_parrot_bk_modif_9.png
 
+#-Bind keys to lock
 bindsym $mod+o exec $locker
 bindsym $mod+Shift+o exec $locker && systemctl suspend
 
-# Auto lock the screen
-exec "xautolock -detectsleep -time 19 -locker \"$locker\""
-# exec "xautolock -detectsleep -time 19 -locker \"i3block -t -c 000000 -i ~/.wallpapers/lasercata_logo_fly_on_parrot_bk_modif_9.png\""
-#TODO: test this.
-#does not works ...
+#-Auto lock the screen
+# exec_always "xautolock -detectsleep -time 9 -locker \"$locker\""
+exec_always --no-startup-id xss-lock -l $locker
 
-#TODO: add the battery script.
-exec ~/.config/i3/scripts/battery_mesages.sh
+#TODO: test this.
 # }}}
 
 #------Workspaces
