--- a/config/i3wm/config
+++ b/config/i3wm/config
@@ -2,9 +2,9 @@
 
 #--------------------------------
 #
-# Last modification : 2023.07.12
+# Last modification : 2023.07.13
 # Author            : Lasercata
-# Version           : v1.8.6
+# Version           : v1.8.7
 #
 #--------------------------------
 
@@ -31,14 +31,7 @@ exec_always "pactl set-source-volume 0 0%"
 # Done in the file /etc/default/keyboard
 
 #---Battery script launch
-exec_always ~/.config/i3/scripts/battery_mesages.sh
-#}}}
-
-#------Appearance
-#{{{
-#---Font
-# Font for window titles. Will also be used by the bar unless a different font is used in the bar {} block below.
-font pango:Hack 10
+exec_always --no-startup-id ~/.config/i3/scripts/battery_messages.sh
 
 #---Status bar (polybar)
 exec_always --no-startup-id ~/.config/polybar/launch.sh
@@ -47,6 +40,14 @@ exec_always --no-startup-id ~/.config/polybar/launch.sh
 #     i3bar_command i3bar --transparency
 #     status_command i3status
 # }
+
+#}}}
+
+#------Appearance
+#{{{
+#---Font
+# Font for window titles. Will also be used by the bar unless a different font is used in the bar {} block below.
+font pango:Hack 10
 
 #---Wallpaper
 exec_always --no-startup-id feh --bg-scale ~/.wallpapers/Flow_5120x2880.jpg
