--- a/config/polybar/modules/system.ini
+++ b/config/polybar/modules/system.ini
@@ -127,6 +127,20 @@ label = %output%
 click-left = wifi toggle
 
 
+[module/network-short]
+type = custom/script
+
+; This is the same as above, but with a shorter max-len for the second bar.
+
+exec = $HOME/.config/polybar/scripts/network.py 8
+interval = 1
+
+format = <label>
+label = %output%
+
+click-left = wifi toggle
+
+
 [module/eth]
 type = internal/network
 interface = enp2s0
@@ -222,11 +236,11 @@ animation-charging-6 = " "
 animation-charging-framerate = 750
 
 format-discharging = <ramp-capacity><label-discharging>
-format-discharging-underline = ${colors.ff4500}
+format-discharging-underline = ${colors.cyan-2}
 format-discharging-background = ${colors.bg-1}
-format-discharging-foreground = ${colors.ff4500}
+format-discharging-foreground = ${colors.cyan-2}
 label-discharging = ${self.label-charging}
-label-discharging-underline = ${colors.ff4500}
+label-discharging-underline = ${colors.cyan-2}
 label-discharging-background = ${colors.bg-1}
 label-discharging-foreground = ${colors.fg-3}
 
