--- a/config/polybar/modules/cmus.ini
+++ b/config/polybar/modules/cmus.ini
@@ -21,3 +21,30 @@ format-prefix-foreground = ${colors.ff4500}
 format-prefix-background = ${colors.bg-1}
 
 click-left = cmus-remote -u
+
+
+[module/cmus-short]
+type = custom/script
+
+; This is the same as above, but with a shorter max-len for the second bar.
+
+exec = $HOME/.config/polybar/scripts/cmus.py 30
+exec-if = pgrep -x cmus
+interval = 1
+
+format = <label>
+; format-prefix = "󰝚 "
+
+label = %output%
+; label-maxlen = 50
+; this is done in the python script
+
+label-underline = ${colors.ff4500}
+label-background = ${colors.bg-1}
+label-foreground = ${colors.fg-3}
+
+format-prefix-underline = ${colors.ff4500}
+format-prefix-foreground = ${colors.ff4500}
+format-prefix-background = ${colors.bg-1}
+
+click-left = cmus-remote -u
