--- a/config/i3wm/config
+++ b/config/i3wm/config
@@ -2,9 +2,9 @@
 
 #--------------------------------
 #
-# Last modification : 2023.11.15
+# Last modification : 2023.11.30
 # Author            : Lasercata
-# Version           : v1.8.11
+# Version           : v1.8.12
 #
 #--------------------------------
 
@@ -96,6 +96,7 @@ floating_modifier $mod
 #---Start a terminal
 # bindsym $mod+Return exec i3-sensible-terminal
 bindsym $mod+Return exec kitty
+bindsym $mod+Shift+Return exec alacritty
 
 #---Kill focused window
 bindsym $mod+Shift+q kill
