--- a/config/i3wm/config
+++ b/config/i3wm/config
@@ -2,9 +2,9 @@
 
 #--------------------------------
 #
-# Last modification : 2023.11.30
+# Last modification : 2023.12.04
 # Author            : Lasercata
-# Version           : v1.8.12
+# Version           : v1.8.13
 #
 #--------------------------------
 
@@ -97,6 +97,8 @@ floating_modifier $mod
 # bindsym $mod+Return exec i3-sensible-terminal
 bindsym $mod+Return exec kitty
 bindsym $mod+Shift+Return exec alacritty
+
+bindsym $mod+i exec alacritty --config-file ~/.config/alacritty/alacritty_lf.yml
 
 #---Kill focused window
 bindsym $mod+Shift+q kill
