tmux: adding v, y bindings in copy mode

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -1,8 +1,8 @@
 #--------------------------------------------------
 #
 # Author        :   Lasercata
-# Last modif    :   2023.05.21
-# Version       :   v2.3.2
+# Last modif    :   2023.12.07
+# Version       :   v2.3.4
 #
 #--------------------------------------------------
 
@@ -43,6 +43,8 @@ unbind C-Right
 
 # Vi scroll mode
 set-window-option -g mode-keys vi
+bind-key -T copy-mode-vi 'v' send -X begin-selection
+bind-key -T copy-mode-vi 'y' send -X copy-selection
 
 #Keep current path when creating new windows
 bind c new-window -c "#{pane_current_path}"
@@ -59,16 +61,16 @@ bind % split-window -vc "#{pane_current_path}"
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 
-# Tmux sidebar
-set -g @plugin 'tmux-plugins/tmux-sidebar'
-set -g @sidebar-tree-command 'tree -C' #Colorize the tree
+# # Tmux sidebar
+# set -g @plugin 'tmux-plugins/tmux-sidebar'
+# set -g @sidebar-tree-command 'tree -C' #Colorize the tree
 
 # Tmux line
 source ~/.tmux-status.conf
 
-#---Border color
-set -g pane-border-style "fg=#812200"
-set -g pane-active-border-style "fg=#ff4500"
+# #---Border color
+# set -g pane-border-style "fg=#812200"
+# set -g pane-active-border-style "fg=#ff4500"
 
 #-Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
